K8S/inventory-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopinventoryservice
  template:
    metadata:
      labels:
        app: shopinventoryservice
    spec:
      containers:
        - name: shopinventoryservice
          image: josephpatricio/shopinventory:dev          
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: shopinventoryservice
  ports:
    - name: shopinventoryservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shopinventorynpservice-srv
spec:
  type: NodePort
  selector:
    app: shopinventoryservice
  ports:
    - name: shopinventoryservice
      protocol: TCP
      port: 80
      targetPort: 80
