K8S/react-depl.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: react-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-docker
  template:
    metadata:
      labels:
        app: react-docker
    spec:
      containers:
      - name: react-docker
        image: josephpatricio/react-docker:dev
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: react-docker
  ports:
    - name: react-docker
      protocol: TCP
      port: 80
      targetPort: 80
