K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv  
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'  
spec:
  rules:
  - host: shop.com
    http:
      paths:
      - path: /items
        pathType: Prefix
        backend:
          service:
            name: catalog-clusterip-srv
            port: 
              number: 80
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory-clusterip-srv
            port:
              number: 80
